// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should not render the toolbar without toolbar props 1`] = `
<div
  className="tc-list"
>
  <div
    className="tc-list-display"
  >
    <div>
      <table
        className="table tc-list-display-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              <span
                className={undefined}
              >
                Id
              </span>
              <div
                aria-hidden="true"
              >
                Id
              </div>
            </th>
            <th>
              <span
                className={undefined}
              >
                Name
              </span>
              <div
                aria-hidden="true"
              >
                Name
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className=""
            id={undefined}
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor={undefined}
                >
                  <input
                    checked={false}
                    id={undefined}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Hello world
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    1
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Hello world
                  </span>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className=""
            id={undefined}
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor={undefined}
                >
                  <input
                    checked={false}
                    id={undefined}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Foo
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    2
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Foo
                  </span>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className=""
            id={undefined}
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor={undefined}
                >
                  <input
                    checked={false}
                    id={undefined}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Bar
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    3
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Bar
                  </span>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`List should render 1`] = `
<div
  className="tc-list"
>
  <div
    className="tc-list-toolbar"
  >
    <div
      className="navbar navbar-default"
      role="toolbar"
    >
      <div
        className="container-fluid"
      >
        <form
          className="navbar-form navbar-left"
        >
          <div
            className="checkbox-inline navbar-text"
          >
            <label
              className="tc-list-toolbar-select-all"
              htmlFor={undefined}
            >
              <input
                checked={false}
                disabled={false}
                id={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              <span>
                Select All
              </span>
            </label>
          </div>
        </form>
        <p
          className="navbar-text"
        >
          <label
            htmlFor={undefined}
          >
            Display:
          </label>
        </p>
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id={42}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-table"
                />
              </svg>
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby={42}
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-table"
                    />
                  </svg>
                  Table
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-expanded"
                    />
                  </svg>
                  Expanded
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-tiles"
                    />
                  </svg>
                  Tile
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <p
          className="navbar-text"
        >
          <label
            htmlFor={undefined}
          >
            Sort by:
          </label>
        </p>
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id={42}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Name
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby={42}
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Id
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Name
                </a>
              </li>
            </ul>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id={undefined}
              onClick={[Function]}
              role="button"
            >
              Ascending
            </a>
          </li>
        </ul>
        <p
          className="navbar-text"
        >
          <label
            htmlFor={undefined}
          >
            Show:
          </label>
        </p>
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id={42}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              5
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby={42}
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  5
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  10
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  20
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  50
                </a>
              </li>
            </ul>
          </li>
          <li
            className="btn-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id={undefined}
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-chevron-end"
                />
              </svg>
            </a>
          </li>
          <li
            className="btn-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id={undefined}
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-chevron-left"
                />
              </svg>
            </a>
          </li>
          <li
            className="disabled"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              tabIndex={-1}
            >
              <span
                className="btn-link"
              >
                2
                /
                3
              </span>
            </a>
          </li>
          <li
            className="btn-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id={undefined}
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-chevron-left"
                />
              </svg>
            </a>
          </li>
          <li
            className="btn-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id={undefined}
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-chevron-end"
                />
              </svg>
            </a>
          </li>
        </ul>
        <button
          className="navbar-right btn btn-link"
          disabled={false}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseOver={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-search"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="tc-list-display"
  >
    <div>
      <table
        className="table tc-list-display-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              <span
                className={undefined}
              >
                Id
              </span>
              <div
                aria-hidden="true"
              >
                Id
              </div>
            </th>
            <th>
              <span
                className={undefined}
              >
                Name
              </span>
              <div
                aria-hidden="true"
              >
                Name
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className=""
            id={undefined}
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor={undefined}
                >
                  <input
                    checked={false}
                    id={undefined}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Hello world
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    1
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Hello world
                  </span>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className=""
            id={undefined}
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor={undefined}
                >
                  <input
                    checked={false}
                    id={undefined}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Foo
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    2
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Foo
                  </span>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className=""
            id={undefined}
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor={undefined}
                >
                  <input
                    checked={false}
                    id={undefined}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Bar
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    3
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Bar
                  </span>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`List should render empty list in large 1`] = `
<div
  className="tc-list"
>
  <div
    className="tc-list-display"
  >
    <p
      className={undefined}
    >
      No result found
    </p>
  </div>
</div>
`;

exports[`List should render empty list in table 1`] = `
<div
  className="tc-list"
>
  <div
    className="tc-list-display"
  >
    <div>
      <table
        className="table tc-list-display-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              <span
                className={undefined}
              >
                Id
              </span>
              <div
                aria-hidden="true"
              >
                Id
              </div>
            </th>
            <th>
              <span
                className={undefined}
              >
                Name
              </span>
              <div
                aria-hidden="true"
              >
                Name
              </div>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
      <p
        className={undefined}
      >
        No result found
      </p>
    </div>
  </div>
</div>
`;

exports[`List should render empty list in tile 1`] = `
<div
  className="tc-list"
>
  <div
    className="tc-list-display"
  >
    <p
      className={undefined}
    >
      No result found
    </p>
  </div>
</div>
`;

exports[`List should render id if provided 1`] = `
<div
  className="tc-list"
>
  <div
    className="tc-list-toolbar"
  >
    <div
      className="navbar navbar-default"
      role="toolbar"
    >
      <div
        className="container-fluid"
      >
        <form
          className="navbar-form navbar-left"
        >
          <div
            className="checkbox-inline navbar-text"
          >
            <label
              className="tc-list-toolbar-select-all"
              htmlFor="context-check-all"
            >
              <input
                checked={false}
                disabled={false}
                id="context-check-all"
                onChange={[Function]}
                type="checkbox"
              />
              <span>
                Select All
              </span>
            </label>
          </div>
        </form>
        <p
          className="navbar-text"
        >
          <label
            htmlFor="context-display-mode"
          >
            Display:
          </label>
        </p>
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="context-display-mode"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-table"
                />
              </svg>
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="context-display-mode"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id="context-display-mode-table"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-table"
                    />
                  </svg>
                  Table
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id="context-display-mode-large"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-expanded"
                    />
                  </svg>
                  Expanded
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id="context-display-mode-tile"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-tiles"
                    />
                  </svg>
                  Tile
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <p
          className="navbar-text"
        >
          <label
            htmlFor="context-sort-by"
          >
            Sort by:
          </label>
        </p>
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="context-sort-by"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Name
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="context-sort-by"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id="context-sort-by-item-id"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Id
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  id="context-sort-by-item-name"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Name
                </a>
              </li>
            </ul>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id="context-sort-order"
              onClick={[Function]}
              role="button"
            >
              Ascending
            </a>
          </li>
        </ul>
        <p
          className="navbar-text"
        >
          <label
            htmlFor="context-pagination-size"
          >
            Show:
          </label>
        </p>
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="context-pagination-size"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              5
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="context-pagination-size"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  5
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  10
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  20
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  50
                </a>
              </li>
            </ul>
          </li>
          <li
            className="btn-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id="context-pagination-nav-to-first"
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-chevron-end"
                />
              </svg>
            </a>
          </li>
          <li
            className="btn-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id="context-pagination-nav-to-prev"
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-chevron-left"
                />
              </svg>
            </a>
          </li>
          <li
            className="disabled"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              tabIndex={-1}
            >
              <span
                className="btn-link"
              >
                2
                /
                3
              </span>
            </a>
          </li>
          <li
            className="btn-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id="context-pagination-nav-to-next"
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-chevron-left"
                />
              </svg>
            </a>
          </li>
          <li
            className="btn-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              id="context-pagination-nav-to-last"
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-chevron-end"
                />
              </svg>
            </a>
          </li>
        </ul>
        <button
          className="navbar-right btn btn-link"
          disabled={false}
          id="context-filter"
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseOver={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-search"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="tc-list-display"
  >
    <div>
      <table
        className="table tc-list-display-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              <span
                className={undefined}
              >
                Id
              </span>
              <div
                aria-hidden="true"
              >
                Id
              </div>
            </th>
            <th>
              <span
                className={undefined}
              >
                Name
              </span>
              <div
                aria-hidden="true"
              >
                Name
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className=""
            id="context-0"
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor="context-0-check"
                >
                  <input
                    checked={false}
                    id="context-0-check"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Hello world
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    1
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Hello world
                  </span>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className=""
            id="context-1"
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor="context-1-check"
                >
                  <input
                    checked={false}
                    id="context-1-check"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Foo
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    2
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Foo
                  </span>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className=""
            id="context-2"
          >
            <td>
              <div
                className="checkbox"
              >
                <label
                  htmlFor="context-2-check"
                >
                  <input
                    checked={false}
                    id="context-2-check"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <span>
                    <span
                      className="sr-only"
                    >
                      Select 
                      Bar
                    </span>
                  </span>
                </label>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    3
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                className="tc-list-display-table-td"
              >
                <div
                  className="cell"
                >
                  <span
                    className="item-text"
                    onFocus={[Function]}
                    onMouseOver={[Function]}
                  >
                    Bar
                  </span>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
